# funny-keyboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
src/: animated_texture.h  definitions.h  main.cpp  renderer.h
